added stylesheet and linked it to index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>This is cool</title>
 </head>
 <body>
-
+  <h1>Does this work?</h1>
 </body>
 </html>
